--- a/readme
+++ b/readme
@@ -1,5 +1,11 @@
 # Disaster Response Pipeline Project
 
+### File Description:
+
+1. process_data.py: creates the pipeline to load, transfer and clean the data, and finally save the data into SQL database.
+2. train_classifier.py: build the ML model, load the model to train and export the model
+3. run.py: create the website and display 2 visualizations and include it in the project.
+
 ### Instructions:
 1. Run the following commands in the project's root directory to set up the database and model.
 
@@ -12,3 +18,6 @@
     `python run.py`
 
 3. Go to http://0.0.0.0:3001/
+
+
+
